--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Top Fails: GIF style</title>
 </head>
 <body>
     <div class="container">
@@ -17,7 +17,8 @@
                 </div>
                 <input type="text" class="form-control GIF" placeholder="Add your GIF button here!">
         </div>
-        <div class="d-inline-flex flex-row result"></div>
+        <div class="row result"></div>
+        <div class="load-btn"></div>
     </div>
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
