--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Top Fails: GIF style</title>
 </head>
@@ -15,13 +17,16 @@
                 <div class="input-group-prepend">
                   <button class="btn btn-outline-secondary js-add" type="button" id="button-addon1">GIF it!</button>
                 </div>
-                <input type="text" class="form-control GIF" placeholder="Add your GIF button here!">
+                <input type="text" class="form-control GIF" placeholder="Add your GIF fail button here!">
         </div>
         <div class="row result"></div>
         <div class="load-btn"></div>
     </div>
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Link to Swiper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
     <!-- Link to JS file -->
     <script src="javascript/giphy.js"></script>
 
