created collapsible navbar that included the buttons and text input so it could be collapsed while viewing gifs and images. made input recognize enter key as submit

--- a/index.html
+++ b/index.html
@@ -8,20 +8,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/2e70233dc2.js"></script>
     <title>Top Fails: GIF style</title>
 </head>
 <body>
-    <div class="container">
-        <div class="d-inline-flex justify-content-around flex-row buttons"></div>
-        <div class="input-group mt-3 mb-5">
-                <div class="input-group-prepend">
-                  <button class="btn btn-outline-secondary js-add" type="button" id="button-addon1">GIF it!</button>
-                </div>
-                <input type="text" class="form-control GIF" placeholder="Add your GIF fail button here!">
+    <div class="card">
+        <div class="card-header" id="headingOne">
+            <button class="btn btn-link" id="toggler" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Expand</button>
         </div>
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#toggler">
+
+            <div class="d-inline-flex justify-content-around flex-row buttons"></div>
+            <div class="input-group mt-3">
+                    <div class="input-group-prepend">
+                    <input class="btn btn-outline-secondary js-add" type="submit" id="button-addon1" value="GIF IT!"></input>
+                    </div>
+                    <input type="text" class="form-control GIF" placeholder="Add your GIF fail button here!">
+            </div>
+        </div>
+    </div>  
+    <div class="container">
         <div class="row result"></div>
         <div class="load-btn"></div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Swiper -->
