fixed issue with navbar collapse where it wouldn't write new text on first click. centered load button on bottom of screen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="card">
         <div class="card-header" id="headingOne">
-            <button class="btn btn-link" id="toggler" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Expand</button>
+            <button class="btn btn-link" id="toggler" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Click to search GIFs</button>
         </div>
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#toggler">
 
